--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Semantics</title>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text|Montserrat:100,400&display=swap" rel="stylesheet">
+
+  <title>Semantics</title>
+
+
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text|Montserrat:100,400&display=swap" rel="stylesheet">
+
+  
 
 
   </head>
@@ -14,15 +20,54 @@
   <body>
   	<h1>Semantic Elements</h1>
   	<div class="bodyContainer">
-  		<header>Header</header>
+  		<header><img id="logo" src="images/gallery.jpg" alt="logo"></header>
   		<main>
-  			<nav>nav</nav>
-  			<section>section</section>
-  			<aside>aside</aside>
+  			<nav>
+  				<ul>
+  					<li><a href="#section1">Home</a></li>
+  					<li><a href="#section2">About</a></li>
+  					<li><a href="#section3">Menu</a></li>
+  					<li><a href="#section4">Contact</a></li>
+  				</ul>
+  			</nav>
+
+  			<div class="section">
+	  			<section id="section1">
+	  				<h2>Section 1</h2>
+	  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nemo dolore sunt repudiandae sapiente voluptatibus ducimus aut dolorum dolor deleniti distinctio vitae ullam animi nobis, amet cumque, ipsa nihil iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel iste, quia provident dignissimos, possimus officiis harum tempora vero eum dolore excepturi nihil totam earum nesciunt numquam atque! Eum, delectus, quod.</p>
+	  			</section>
+
+	  			<section id="section2">
+	  				<h2>Section 2</h2>
+	  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nemo dolore sunt repudiandae sapiente voluptatibus ducimus aut dolorum dolor deleniti distinctio vitae ullam animi nobis, amet cumque, ipsa nihil iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci maiores quaerat tempore dolore. Animi eligendi nihil temporibus, nemo. Minima porro sed esse voluptatibus fugit ipsam saepe aut animi dolores distinctio?</p>
+	  			</section>
+
+	  			<section id="section3">
+	  				<h2>Section 3</h2>
+	  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nemo dolore sunt repudiandae sapiente voluptatibus ducimus aut dolorum dolor deleniti distinctio vitae ullam animi nobis, amet cumque, ipsa nihil iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, et consequuntur quis labore architecto commodi atque quas nihil necessitatibus veritatis quae repudiandae aliquid unde porro. Eius vero praesentium obcaecati sapiente.</p>
+	  			</section>
+
+	  			<section id="section4">
+	  				<h2>Section 4</h2>
+	  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi nemo dolore sunt repudiandae sapiente voluptatibus ducimus aut dolorum dolor deleniti distinctio vitae ullam animi nobis, amet cumque, ipsa nihil iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magni quia vero quaerat saepe minus laudantium inventore! Veritatis maiores aperiam illum ratione facilis excepturi aut repellat quia, hic? Aliquam, odio?</p>
+	  			</section>
+  			</div>
+
+
+
+
+
+
+  			<aside>
+  				<img class="asideImage" src="images/tree1.jpg" alt="aside pic tree">
+  			</aside>
 
 
   		</main>
-  		<footer>Footer</footer>
+  		<footer>
+  			<i class="fab fa-facebook"></i>
+  			<i class="fab fa-twitter"></i>
+  		</footer>
   	</div>
 
   
